--- a/part2/data_structures.ipynb
+++ b/part2/data_structures.ipynb
@@ -311,11 +311,239 @@
     "    print(\"\\nJim's email is\", address_book[\"jim\"])\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SEQUENCE\n",
+    "- Lists, tuples, and strings are examples of sequences, but what are sequences?\n",
+    "- Main features: membership tests (i.e. the in and not in expressions), indexing operations (facilitate fetching a particular item in the sequence directly.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item 0 is apple\n",
+      "Item 1 is mango\n",
+      "Item 2 is carrot\n",
+      "Item 3 is banana\n",
+      "Item -3 is mango\n",
+      "Item -2 is carrot\n",
+      "Item -1 is banana\n",
+      "Character 0 is j\n",
+      "Item 1 to 3 is ['mango', 'carrot']\n",
+      "Item 2 to end is ['carrot', 'banana']\n",
+      "Item 1 to -1 is ['mango', 'carrot']\n",
+      "Item start to end is ['apple', 'mango', 'carrot', 'banana']\n",
+      "Item 1 to 3 is or\n",
+      "Item 2 to end is rdan\n",
+      "Item 1 to -1 is orda\n",
+      "Item start to end is jordan\n"
+     ]
+    }
+   ],
+   "source": [
+    "shop_list = ['apple', 'mango', 'carrot', 'banana']\n",
+    "name = 'jordan'\n",
+    "\n",
+    "# Indexing or 'Subscription' operation #\n",
+    "for i in range(len(shop_list)):\n",
+    "    print('Item', i, 'is', shop_list[i])\n",
+    "    \n",
+    "# with any list, we can iterate through it backwards\n",
+    "print('Item -3 is', shop_list[-3])\n",
+    "print('Item -2 is', shop_list[-2])\n",
+    "print('Item -1 is', shop_list[-1])\n",
+    "print('Character 0 is', name[0])\n",
+    "\n",
+    "# Slicing on a list\n",
+    "print('Item 1 to 3 is', shop_list[1:3])\n",
+    "print('Item 2 to end is', shop_list[2:])\n",
+    "print('Item 1 to -1 is', shop_list[1:-1])\n",
+    "print('Item start to end is', shop_list[:])\n",
+    "\n",
+    "# Slice on a string\n",
+    "print('Item 1 to 3 is', name[1:3])\n",
+    "print('Item 2 to end is', name[2:])\n",
+    "print('Item 1 to -1 is', name[1:-1])\n",
+    "print('Item start to end is', name[:])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slicing also allows for a third argument - step size (it is one by default)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'mango', 'carrot', 'banana']\n",
+      "['apple', 'carrot']\n",
+      "['banana', 'carrot', 'mango', 'apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "shop_list = ['apple', 'mango', 'carrot', 'banana']\n",
+    "print(shop_list[::1]) # [start:end:step]\n",
+    "print(shop_list[::2])\n",
+    "print(shop_list[::-1]) # reverse the list\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SET\n",
+    "- unordered\n",
+    "- does not allow duplicates\n",
+    "- can see if a class is a subset of another class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nvidia', 'amd', 'intel'}\n",
+      "{'nvidia', 'Tesla', 'amd', 'intel'}\n",
+      "{'nvidia', 'Tesla', 'amd', 'intel'}\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "gpu = set(['nvidia', 'amd', 'intel'])\n",
+    "print(gpu)\n",
+    "gpu.add('Tesla')\n",
+    "new_gpu = gpu.copy()\n",
+    "gpu.add('nvidia')\n",
+    "gpu.add('Tesla')\n",
+    "print(gpu)\n",
+    "print(new_gpu)\n",
+    "print(new_gpu.issubset(gpu))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "REFERENCES\n",
+    "- When creating an object and assigning it to a variable, the variable only refers to the object and does not represent the object itself\n",
+    "- The variable name is a pointer that points to the part of your computer's memory where the object is stored"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simple assignment\n",
+      "['mango', 'carrot', 'banana']\n",
+      "['mango', 'carrot', 'banana']\n",
+      "shop_list is ['mango', 'carrot', 'banana']\n",
+      "my_list is ['carrot', 'banana']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Simple assignment\")\n",
+    "shop_list = ['apple', 'mango', 'carrot', 'banana']\n",
+    "my_list = shop_list # my_list is just another name pointing to the same object!\n",
+    "\n",
+    "# say we purches the first item in the list\n",
+    "del shop_list[0]\n",
+    "\n",
+    "print(my_list)\n",
+    "print(shop_list)\n",
+    "\n",
+    "# note that both have apple removed\n",
+    "\n",
+    "# now, if we make a copy with a full slice, note what happens\n",
+    "my_list = shop_list[:]\n",
+    "del my_list[0]\n",
+    "\n",
+    "print('shop_list is', shop_list)\n",
+    "print('my_list is', my_list)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ADDITIONAL FUNCTIONALITY WITH STRINGS\n",
+    "- strings are objects and have build in methods\n",
+    "- i.e. format, startswith, find, delimiter etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found \"jdawg\"\n",
+      "yes, there is an \"a\" in the name\n",
+      "yes, there is a \"dog\" in the name\n",
+      "Brazil_*_Russia_*_India_*_China\n"
+     ]
+    }
+   ],
+   "source": [
+    "# string object\n",
+    "name = 'jdawggydog'\n",
+    "\n",
+    "if name.startswith('jdawg'):\n",
+    "    print('Found \"jdawg\"')\n",
+    "\n",
+    "if 'a' in name:\n",
+    "    print('yes, there is an \"a\" in the name')\n",
+    "\n",
+    "if name.find('dog'):\n",
+    "    print('yes, there is a \"dog\" in the name')\n",
+    "\n",
+    "delimiter = '_*_'\n",
+    "my_list = ['Brazil', 'Russia', 'India', 'China']\n",
+    "print(delimiter.join(my_list))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -329,12 +557,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "293803cbaa357c9860d68c02f93ff4620a4e56c52c7c4c94fc6d47d407649920"
+    "hash": "a68f03d5b51d71e9618ac169d65e588645e27f9fde4b6854514898c829210307"
    }
   }
  },
