--- a/part2/oop.ipynb
+++ b/part2/oop.ipynb
@@ -255,7 +255,91 @@
     " - the how_many method is a method that belongs to the class and not the object\n",
     " - we can use decorators to be shortcutes to calling a wrapper function (i.e. a function that wraps around another function so that it can do something before or after the inner function)\n",
     " - all class members are public with one exception - data members with names using the double underscore prefix __privatevar, Python uses name-mangling to make it a private variable\n",
-    " - "
+    " "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "INHERITANCE\n",
+    "- type and subtype relationship"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Initialized SchoolMember: Mr. Jdawggydog)\n",
+      "(Initialized Teacher: Mr. Jdawggydog)\n",
+      "(Initialized SchoolMember: Little Jordan)\n",
+      "(Initialized Student: Little Jordan)\n",
+      "Name: \"Mr. Jdawggydog\" Age: \"35\" Salary: \"30000\"\n",
+      "Name: \"Little Jordan\" Age: \"18\" "
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Student' object has no attribute 'marks'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10040\\13091213.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[0mmembers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mteacher_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstudent_1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mmember\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmembers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m     \u001b[0mmember\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtell\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10040\\13091213.py\u001b[0m in \u001b[0;36mtell\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mtell\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m         \u001b[0mSchoolMember\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtell\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Marks: \"{:d}\"'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmarks\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Student' object has no attribute 'marks'"
+     ]
+    }
+   ],
+   "source": [
+    "class SchoolMember:\n",
+    "    '''Represents any school member.'''\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        print('(Initialized SchoolMember: {})'.format(self.name))\n",
+    "            \n",
+    "    def tell(self):\n",
+    "        '''Tell my details.'''\n",
+    "        print('Name: \"{}\" Age: \"{}\"'.format(self.name, self.age), end=\" \")\n",
+    "        \n",
+    "        \n",
+    "class Teacher(SchoolMember):\n",
+    "    '''Represents a teacher.'''\n",
+    "    def __init__(self, name, age, salary):\n",
+    "        SchoolMember.__init__(self, name, age)\n",
+    "        self.salary = salary\n",
+    "        print('(Initialized Teacher: {})'.format(self.name))\n",
+    "        \n",
+    "    def tell(self):\n",
+    "        SchoolMember.tell(self)\n",
+    "        print('Salary: \"{:d}\"'.format(self.salary))\n",
+    "        \n",
+    "\n",
+    "class Student(SchoolMember):\n",
+    "    '''Represents a student'''\n",
+    "    def __init__(self, name, age, grades):\n",
+    "        SchoolMember.__init__(self, name, age)\n",
+    "        self.grades = grades\n",
+    "        print('(Initialized Student: {})'.format(self.name))\n",
+    "        \n",
+    "    def tell(self):\n",
+    "        SchoolMember.tell(self)\n",
+    "        print('Marks: \"{:d}\"'.format(self.marks))\n",
+    "        \n",
+    "\n",
+    "teacher_1 = Teacher('Mr. Jdawggydog', 35, 30000)\n",
+    "student_1 = Student('Little Jordan', 18, 75)\n",
+    "\n",
+    "members = [teacher_1, student_1]\n",
+    "for member in members:\n",
+    "    member.tell()"
    ]
   }
  ],
