--- a/part2/exceptions.ipynb
+++ b/part2/exceptions.ipynb
@@ -174,6 +174,45 @@
     "        f.close()\n",
     "    print(\"(Cleaning up: Closed the file)\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WITH STATEMENT\n",
+    "- acquiring a resource in the try block and releasing the resource in the finally block is common"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Programming is fun\n",
+      "When the work is done,\n",
+      "if you wanna make your work also fun:\n",
+      "    use Python!"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"poem.txt\") as f:\n",
+    "    for line in f:\n",
+    "        print(line, end='')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above code block works by using a protocol the with statement implements. It fetches the object returned by the open statement. It always calls the thefile.__enter__ function after finishing the block of code. "
+   ]
   }
  ],
  "metadata": {
